# mcli

./: .editorconfig  .gitignore  pyproject.toml
mcli/: __main__.py
